# Team8Version2

./: CMakeLists.txt  CP4P_Final_Assingment_Plan.xlsx  V1_test_cases.xlsx  converting.c  converting.h  fundamentals.c  fundamentals.h  main.c  manipulating.c  manipulating.h  test_screenshot.txt  tokenizing.c  tokenizing.h
